tests/paczka1/fuzzy1/71715125.err
Error in line 12: OInGwieSZDL A509 76,6
Error in line 21: OInGwieSZDL A888 34,2
Error in line 13: nTEdI2cH7 S154 92,2
Error in line 35: oqQusOi1uHT S154 64,5
Error in line 33: c5NLUftgD3 A509 39,8
